--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="/img/logo.png" alt="logo">
+                    <img src="img/logo.png" alt="logo">
                     <h2>NOM<span class="danger">BRE</span></h2>
                 </div>
                 <div class="close" id="close-btn">
